Avances, selección de vinos por cuantiles

--- a/src/models/synthetic_user_draft.ipynb
+++ b/src/models/synthetic_user_draft.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "38058a87",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4b705032",
    "metadata": {},
    "outputs": [],
@@ -59,28 +59,49 @@
     "    return meal_df.loc[i]\n",
     "\n",
     "# Elección de categoría según un valor dado\n",
-    "def get_category(value, quantiles=[.25, .5, .75], categories=[\"leve\", \"moderado\", \"marcado\", \"intenso\"]):\n",
-    "    if len(quantiles) + 1 != len(categories):\n",
-    "        raise IndexError(\"Length of quantiles and categories does not match!\")\n",
+    "def get_category(value, quantile_values, categories=[\"leve\", \"moderado\", \"marcado\", \"intenso\"]):\n",
+    "    if len(quantile_values)-1 != len(categories)*2:\n",
+    "        raise IndexError(\"Length of quantiles ranges and categories does not match!\")\n",
     "    \n",
-    "    for i, q in enumerate(quantiles):\n",
-    "        if value <= q:\n",
-    "            return categories[i]\n",
-    "        \n",
-    "    return categories[-1]\n",
+    "    quant_values = quantile_values.values\n",
+    "\n",
+    "    # Obtiene categoría y valor del cuantil medio del rango\n",
+    "    for i in range(0, len(quant_values)-2, 2):\n",
+    "        start_val = quant_values[i]\n",
+    "        end_val = quant_values[i+2]\n",
+    "\n",
+    "        if start_val <= value < end_val:\n",
+    "            cat = categories[i//2]\n",
+    "            quant_mid = quant_values[i+1]\n",
+    "            return cat, quant_mid\n",
+    "    \n",
+    "    # Gestiona valores atípicos (mayores o menores que el máximo o mínimo valor de los cuantiles)\n",
+    "    if value >= end_val:\n",
+    "        cat = categories[i//2] # Último i asignado es el mayor i\n",
+    "        quant_mid = quant_values[i+1]\n",
+    "        return cat, quant_mid\n",
+    "    \n",
+    "    if 0 <= value < quant_values[0]:\n",
+    "        cat = categories[0]\n",
+    "        quant_mid = quant_values[1]\n",
+    "        return cat, quant_mid\n",
+    "    \n",
+    "    # Levanta error si el valor es inferior a cero\n",
+    "    if value < 0:\n",
+    "        raise ValueError(\"Passed value is less than zero!\")\n",
     "\n",
     "# Creación de perfiles de sabor por pairing (para elecciones que hagan sentido con la elección del user)\n",
-    "def build_pairing_profile(df, pairing_cols, quantiles=[.25, .5, .75]):\n",
+    "def build_pairing_profile(df, pairing_cols, taste_cols, quantiles=[0, .125, .25, .375, .5, .625, .75, .875, 1]):\n",
     "    profiles = {}\n",
     "    deviations = {}\n",
     "    for pairing in pairing_cols:\n",
     "        pairing_subset = df[df[pairing] == 1]\n",
     "        profiles[pairing] = {}\n",
     "        deviations[pairing] = {}\n",
-    "        for taste in [\"body\", \"tannis\", \"sweetness\", \"acidity\"]:\n",
+    "        for taste in taste_cols:\n",
     "            # Cuantiles\n",
-    "            cuartiles = pairing_subset[taste].quantile(quantiles)\n",
-    "            profiles[pairing][taste] = cuartiles\n",
+    "            taste_quantile = pairing_subset[taste].quantile(quantiles)\n",
+    "            profiles[pairing][taste] = taste_quantile\n",
     "            # Desvío Estandar (para distribución normal en select_taste_profile)\n",
     "            std = pairing_subset[taste].std()\n",
     "            deviations[pairing][taste] = std\n",
@@ -88,16 +109,22 @@
     "    return profiles, deviations\n",
     "\n",
     "# Selección del perfil de vino con algo de sentido común (en general)\n",
-    "def select_taste_profile(pairing, profiles, deviations, prob=.2, categories=[\"leve\", \"moderado\", \"marcado\", \"intenso\"]):\n",
+    "def select_taste_profile(taste_cols, pairing, profiles, deviations, prob=.2, categories=[\"leve\", \"moderado\", \"marcado\", \"intenso\"]):\n",
     "    selected_profile = {}\n",
-    "    for taste in [\"body\", \"tannis\", \"sweetness\", \"acidity\"]:\n",
+    "    for taste in taste_cols:\n",
     "        if random.random() < prob:\n",
-    "            selected_profile[taste] = str(np.random.choice(categories))\n",
+    "            quantiles = profiles[pairing][taste]\n",
+    "            quant_random_options = []\n",
+    "            for i in range(1, len(quantiles.values), 2):\n",
+    "                quant_random_options.append(i)\n",
+    "            quant_random_choice = np.random.choice(quant_random_options)\n",
+    "            selected_profile[taste] = get_category(quant_random_choice, quantile_values=quantiles, categories=categories), \"rand!\"\n",
     "        else:\n",
     "            median = profiles[pairing][taste][.5]\n",
     "            std = deviations[pairing][taste]\n",
     "            valor_seleccionado = np.random.normal(loc=median, scale=std)\n",
-    "            selected_profile[taste] = get_category(valor_seleccionado, categories=categories)\n",
+    "            quantiles = profiles[pairing][taste]\n",
+    "            selected_profile[taste] = get_category(valor_seleccionado, quantile_values=quantiles, categories=categories)\n",
     "    return selected_profile\n",
     "\n",
     "# Obtención de top N grapes y su cantidad\n",
@@ -158,55 +185,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "6dbbb253",
+   "cell_type": "markdown",
+   "id": "75b7277d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[18, 23]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "wines_df = pd.read_csv(\"../../src/data/transformed/wines_clean.csv\")\n",
-    "pairings = pd.read_csv(\"../../src/data/processed/aux/pairings.csv\")\n",
-    "pairings = list(pairings[\"pairings\"])\n",
-    "meals_df = pd.read_excel(\"../../src/data/raw/meals/Meals.xlsx\")\n",
-    "grapes = pd.read_csv(\"../../src/data/processed/aux/grapes.csv\")\n",
-    "grapes = grapes[\"grapes\"]\n",
-    "grape_selection = wines_df[grapes]\n",
-    "scaler = MinMaxScaler()\n",
-    "\n",
-    "taste_columns = [\"body\", \"tannis\", \"sweetness\", \"acidity\"]\n",
-    "\n",
-    "wines_copy = wines_df.copy()\n",
-    "wines_copy[taste_columns] = scaler.fit_transform(wines_df[taste_columns])\n",
-    "\n",
-    "\n",
-    "# Creación de perfiles de sabor por pairing y obtención de sus desvíos para selección según distribución normal\n",
-    "profiles, deviations = build_pairing_profile(df=wines_copy, pairing_cols=pairings, quantiles=[.25, .5, .75])\n",
-    "\n",
-    "# Elección aleatoria de una meal y obtención de su pairing principal\n",
-    "selected_meal = select_random_meal(meals_df)\n",
-    "main_pairing = selected_meal[\"Ingrediente Principal\"].lower()\n",
-    "\n",
-    "# Elección del perfil del vino, teniendo en cuenta algo de sentido común de los usuarios\n",
-    "selected_profile = select_taste_profile(pairing=main_pairing, profiles=profiles, deviations=deviations, prob=.2)\n",
-    "\n",
-    "# Estaría bueno acá poder ver una distribución tipo histograma de los sabores según el main pairing elegido\n",
-    "selected_grapes = select_grapes(grape_selection, 8, 1, 4)\n",
-    "\n",
-    "# Elección del rango de precios del vino, teniendo en cuenta lógica de usuario\n",
-    "selected_price = select_price_range(wines_df)\n",
-    "\n",
-    "selected_price"
+    "### elección de vino"
    ]
   },
   {
@@ -218,7 +201,7 @@
    "source": [
     "# Transforma df escalando los gustos y agregando columna \"Otras Uvas\"\n",
     "\n",
-    "def transform_df(df, top_grapes):\n",
+    "def transform_df(df, grapes, top_grapes):\n",
     "    tra_df = df\n",
     "\n",
     "    # Scaling de sabores\n",
@@ -242,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pick_wine(wines_df, user_input, top_n = 10, d=0.075):\n",
+    "def pick_wine(wines_df, user_input, top_n = 10, d=.075):\n",
     "    wines_copy = wines_df.copy()\n",
     "\n",
     "    # User Inputs\n",
@@ -293,9 +276,9 @@
     "        main_pairing_w * wine_base[user_input[\"main_pairing\"]]\n",
     "    )\n",
     "\n",
-    "    # Selección de uno de los mejores 10 vinos\n",
+    "    # Selección de uno de los mejores top_n vinos\n",
     "    top_wine_base = wine_base.nlargest(top_n, \"wine_score\")\n",
-    "    top_selection_weights = [(1 - d)**n for n in range(len(top_wine_base))] # Pesos decrecientes de a 7.5%\n",
+    "    top_selection_weights = [(1 - d)**n for n in range(len(top_wine_base))] # Pesos decrecientes de a d%\n",
     "    top_selection_weights = [w*(random.random() + 1) for w in top_selection_weights] # Agregamos factor aleatorio\n",
     "    total_weight = sum(top_selection_weights)\n",
     "    top_selection_weights = [w / total_weight for w in top_selection_weights] # Normalizamos para interpretabilidad\n",
@@ -305,8 +288,133 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3c3699b",
+   "metadata": {},
+   "source": [
+    "### usuario"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
+   "id": "41a09354",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wines_df = pd.read_csv(\"../../src/data/transformed/wines_clean.csv\")\n",
+    "pairings = pd.read_csv(\"../../src/data/processed/aux/pairings.csv\")\n",
+    "pairings = list(pairings[\"pairings\"])\n",
+    "meals_df = pd.read_excel(\"../../src/data/raw/meals/Meals.xlsx\")\n",
+    "grapes = pd.read_csv(\"../../src/data/processed/aux/grapes.csv\")\n",
+    "grapes = grapes[\"grapes\"]\n",
+    "grape_selection = wines_df[grapes]\n",
+    "scaler = MinMaxScaler()\n",
+    "\n",
+    "taste_columns = [\"body\", \"tannis\", \"sweetness\", \"acidity\"]\n",
+    "scld_taste_columns = [taste + \"_scld\" for taste in taste_columns]\n",
+    "\n",
+    "wines_copy = wines_df.copy()\n",
+    "wines_copy[scld_taste_columns] = scaler.fit_transform(wines_df[taste_columns])\n",
+    "\n",
+    "\n",
+    "# Creación de perfiles de sabor por pairing y obtención de sus desvíos para selección según distribución normal\n",
+    "profiles, deviations = build_pairing_profile(df=wines_copy, pairing_cols=pairings, taste_cols=scld_taste_columns)\n",
+    "\n",
+    "# Elección aleatoria de una meal y obtención de sus pairings\n",
+    "selected_meal = select_random_meal(meals_df)\n",
+    "main_pairing = selected_meal[\"Ingrediente Principal\"].lower()\n",
+    "pairing_list = selected_meal[2:] \n",
+    "pairing_list = list(pairing_list.index[pairing_list>0])\n",
+    "\n",
+    "# Elección del perfil del vino, teniendo en cuenta algo de sentido común de los usuarios\n",
+    "selected_profile = select_taste_profile(taste_cols=scld_taste_columns, pairing=main_pairing, profiles=profiles, deviations=deviations, prob=.2)\n",
+    "\n",
+    "# Estaría bueno acá poder ver una distribución tipo histograma de los sabores según el main pairing elegido\n",
+    "selected_grapes = select_grapes(grape_selection, 8, 1, 4)\n",
+    "\n",
+    "# Elección del rango de precios del vino, teniendo en cuenta lógica de usuario\n",
+    "selected_price_range = select_price_range(wines_df)\n",
+    "\n",
+    "user_input = {\n",
+    "    \"main_pairing\": main_pairing,\n",
+    "    \"pairing_list\": pairing_list,\n",
+    "    \"grape_list\": selected_grapes,\n",
+    "    \"precio_min\": selected_price_range[0],\n",
+    "    \"precio_max\": selected_price_range[1],\n",
+    "    \"tastes\": {\n",
+    "        \"body\": 0.6,\n",
+    "        \"tannis\": 0.3,\n",
+    "        \"sweetness\": 0.3,\n",
+    "        \"acidity\": 0.4\n",
+    "    },\n",
+    "    \"weights\": {\n",
+    "        \"rating\": .3,\n",
+    "        \"price_quality\": .25,\n",
+    "        \"rating_qty\": .1,\n",
+    "        \"user_similarity\": .25,\n",
+    "        \"main_pairing\": .1\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "5a9a3f84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.000    0.000000\n",
+       "0.125    0.355021\n",
+       "0.250    0.377909\n",
+       "0.375    0.401312\n",
+       "0.500    0.441558\n",
+       "0.625    0.476791\n",
+       "0.750    0.523209\n",
+       "0.875    0.613476\n",
+       "1.000    1.000000\n",
+       "Name: acidity_scld, dtype: float64"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wines_copy[wines_copy[main_pairing]==1][\"acidity_scld\"].quantile([0, .125, .25, .375, .5, .625, .75, .875, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "b2570035",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'body_scld': (('intenso', np.float64(0.8094890510948907)), 'rand!'),\n",
+       " 'tannis_scld': ('moderado', np.float64(0.3714016680118375)),\n",
+       " 'sweetness_scld': (('intenso', np.float64(0.5597928436911488)), 'rand!'),\n",
+       " 'acidity_scld': ('moderado', np.float64(0.40131155972740135))}"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "1a5d9049",
    "metadata": {},
    "outputs": [],
