--- a/src/models/synthetic_user_draft.ipynb
+++ b/src/models/synthetic_user_draft.ipynb
@@ -60,38 +60,38 @@
     "\n",
     "# Elección de categoría según un valor dado\n",
     "def get_category(value, quantile_values, categories=[\"leve\", \"moderado\", \"marcado\", \"intenso\"]):\n",
-    "    if len(quantile_values)-1 != len(categories)*2:\n",
+    "    if len(quantile_values)-1 != len(categories):\n",
     "        raise IndexError(\"Length of quantiles ranges and categories does not match!\")\n",
     "    \n",
     "    quant_values = quantile_values.values\n",
     "\n",
-    "    # Obtiene categoría y valor del cuantil medio del rango\n",
-    "    for i in range(0, len(quant_values)-2, 2):\n",
+    "    # Obtiene categoría y valor promedio del rango de los cuantiles\n",
+    "    for i in range(0, len(quant_values)-1):\n",
     "        start_val = quant_values[i]\n",
-    "        end_val = quant_values[i+2]\n",
+    "        end_val = quant_values[i+1]\n",
     "\n",
     "        if start_val <= value < end_val:\n",
-    "            cat = categories[i//2]\n",
-    "            quant_mid = quant_values[i+1]\n",
-    "            return cat, quant_mid\n",
+    "            cat = categories[i]\n",
+    "            mid_val = (start_val + end_val) / 2\n",
+    "            return cat, mid_val\n",
     "    \n",
     "    # Gestiona valores atípicos (mayores o menores que el máximo o mínimo valor de los cuantiles)\n",
     "    if value >= end_val:\n",
-    "        cat = categories[i//2] # Último i asignado es el mayor i\n",
-    "        quant_mid = quant_values[i+1]\n",
-    "        return cat, quant_mid\n",
+    "        cat = categories[i] # Último i asignado es el mayor i\n",
+    "        mid_val = (start_val + end_val)/2\n",
+    "        return cat, mid_val\n",
     "    \n",
     "    if 0 <= value < quant_values[0]:\n",
     "        cat = categories[0]\n",
-    "        quant_mid = quant_values[1]\n",
-    "        return cat, quant_mid\n",
+    "        mid_val = (quant_values[0] + quant_values[1]) / 2\n",
+    "        return cat, mid_val\n",
     "    \n",
     "    # Levanta error si el valor es inferior a cero\n",
     "    if value < 0:\n",
-    "        raise ValueError(\"Passed value is less than zero!\")\n",
+    "        raise ValueError(f\"Passed value is less than zero! {value}\")\n",
     "\n",
     "# Creación de perfiles de sabor por pairing (para elecciones que hagan sentido con la elección del user)\n",
-    "def build_pairing_profile(df, pairing_cols, taste_cols, quantiles=[0, .125, .25, .375, .5, .625, .75, .875, 1]):\n",
+    "def build_pairing_profile(df, pairing_cols, taste_cols, quantiles=[0, .25, .5, .75, 1]):\n",
     "    profiles = {}\n",
     "    deviations = {}\n",
     "    for pairing in pairing_cols:\n",
@@ -108,22 +108,25 @@
     "\n",
     "    return profiles, deviations\n",
     "\n",
-    "# Selección del perfil de vino con algo de sentido común (en general)\n",
+    "# Selección del perfil de vino con algo de sentido común (en general - sumamos probabilidad de random choice)\n",
     "def select_taste_profile(taste_cols, pairing, profiles, deviations, prob=.2, categories=[\"leve\", \"moderado\", \"marcado\", \"intenso\"]):\n",
     "    selected_profile = {}\n",
     "    for taste in taste_cols:\n",
     "        if random.random() < prob:\n",
     "            quantiles = profiles[pairing][taste]\n",
     "            quant_random_options = []\n",
-    "            for i in range(1, len(quantiles.values), 2):\n",
-    "                quant_random_options.append(i)\n",
+    "            for i in range(0, len(quantiles.values)-1):\n",
+    "                mid_val = (quantiles.values[i] + quantiles.values[i+1])/2\n",
+    "                quant_random_options.append(mid_val)\n",
     "            quant_random_choice = np.random.choice(quant_random_options)\n",
-    "            selected_profile[taste] = get_category(quant_random_choice, quantile_values=quantiles, categories=categories), \"rand!\"\n",
+    "            selected_profile[taste] = get_category(quant_random_choice, quantile_values=quantiles, categories=categories)\n",
     "        else:\n",
-    "            median = profiles[pairing][taste][.5]\n",
-    "            std = deviations[pairing][taste]\n",
-    "            valor_seleccionado = np.random.normal(loc=median, scale=std)\n",
     "            quantiles = profiles[pairing][taste]\n",
+    "            median = quantiles[.5]\n",
+    "            std = deviations[pairing][taste]\n",
+    "            min_val = quantiles[0]\n",
+    "            max_val = quantiles[1]\n",
+    "            valor_seleccionado = min(max(np.random.normal(loc=median, scale=std), min_val), max_val)\n",
     "            selected_profile[taste] = get_category(valor_seleccionado, quantile_values=quantiles, categories=categories)\n",
     "    return selected_profile\n",
     "\n",
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 321,
    "id": "79ae3409",
    "metadata": {},
    "outputs": [],
@@ -297,10 +300,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "id": "41a09354",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'meal': 'Guiso de Lentejas',\n",
+       " 'main_pairing': 'vegetarian',\n",
+       " 'pairing_list': ['vegetarian'],\n",
+       " 'grape_list': ['Malbec'],\n",
+       " 'precio_min': 15,\n",
+       " 'precio_max': 34,\n",
+       " 'tastes': {'body': np.float64(0.46343065693430663),\n",
+       "  'tannis': np.float64(0.37758945386064025),\n",
+       "  'sweetness': np.float64(0.3744114877589454),\n",
+       "  'acidity': np.float64(0.39025331104539024)},\n",
+       " 'weights': {'rating': 0.3,\n",
+       "  'price_quality': 0.25,\n",
+       "  'rating_qty': 0.1,\n",
+       "  'user_similarity': 0.25,\n",
+       "  'main_pairing': 0.1}}"
+      ]
+     },
+     "execution_count": 320,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "wines_df = pd.read_csv(\"../../src/data/transformed/wines_clean.csv\")\n",
     "pairings = pd.read_csv(\"../../src/data/processed/aux/pairings.csv\")\n",
@@ -336,17 +364,19 @@
     "# Elección del rango de precios del vino, teniendo en cuenta lógica de usuario\n",
     "selected_price_range = select_price_range(wines_df)\n",
     "\n",
+    "# Generación de user input\n",
     "user_input = {\n",
+    "    \"meal\": selected_meal[\"Comida\"],\n",
     "    \"main_pairing\": main_pairing,\n",
     "    \"pairing_list\": pairing_list,\n",
     "    \"grape_list\": selected_grapes,\n",
     "    \"precio_min\": selected_price_range[0],\n",
     "    \"precio_max\": selected_price_range[1],\n",
     "    \"tastes\": {\n",
-    "        \"body\": 0.6,\n",
-    "        \"tannis\": 0.3,\n",
-    "        \"sweetness\": 0.3,\n",
-    "        \"acidity\": 0.4\n",
+    "        \"body\": selected_profile[\"body_scld\"][1],\n",
+    "        \"tannis\": selected_profile[\"tannis_scld\"][1],\n",
+    "        \"sweetness\": selected_profile[\"sweetness_scld\"][1],\n",
+    "        \"acidity\": selected_profile[\"acidity_scld\"][1]\n",
     "    },\n",
     "    \"weights\": {\n",
     "        \"rating\": .3,\n",
@@ -355,142 +385,18 @@
     "        \"user_similarity\": .25,\n",
     "        \"main_pairing\": .1\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "user_input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "id": "5a9a3f84",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.000    0.000000\n",
-       "0.125    0.355021\n",
-       "0.250    0.377909\n",
-       "0.375    0.401312\n",
-       "0.500    0.441558\n",
-       "0.625    0.476791\n",
-       "0.750    0.523209\n",
-       "0.875    0.613476\n",
-       "1.000    1.000000\n",
-       "Name: acidity_scld, dtype: float64"
-      ]
-     },
-     "execution_count": 172,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wines_copy[wines_copy[main_pairing]==1][\"acidity_scld\"].quantile([0, .125, .25, .375, .5, .625, .75, .875, 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
-   "id": "b2570035",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'body_scld': (('intenso', np.float64(0.8094890510948907)), 'rand!'),\n",
-       " 'tannis_scld': ('moderado', np.float64(0.3714016680118375)),\n",
-       " 'sweetness_scld': (('intenso', np.float64(0.5597928436911488)), 'rand!'),\n",
-       " 'acidity_scld': ('moderado', np.float64(0.40131155972740135))}"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "selected_profile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 322,
    "id": "1a5d9049",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy import stats\n",
-    "from sklearn.metrics.pairwise import euclidean_distances\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
-    "wines_copy = wines_df.copy()\n",
-    "\n",
-    "# Agregamos Otras Uvas a las uvas para coincidir con la elección de synthetic user\n",
-    "top_grapes = list(get_top_grapes(grape_selection, 8).index)\n",
-    "other_grapes = [grape for grape in grapes if grape not in top_grapes]\n",
-    "wines_copy[\"Otras Uvas\"] = wines_copy[other_grapes].max(axis=1)\n",
-    "\n",
-    "\n",
-    "user_input = {\n",
-    "    \"main_pairing\": \"beef\",\n",
-    "    \"pairing_list\": [\"beef\", \"pasta\"],\n",
-    "    \"grape_list\": [\"Malbec\", \"Cabernet Franc\", \"Otras Uvas\"],\n",
-    "    \"precio_min\": 0,\n",
-    "    \"precio_max\": 15,\n",
-    "    \"tastes\": {\n",
-    "        \"body\": 0.6,\n",
-    "        \"tannis\": 0.3,\n",
-    "        \"sweetness\": 0.3,\n",
-    "        \"acidity\": 0.4\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "# Filtro por pairings\n",
-    "user_pairings = user_input[\"pairing_list\"]\n",
-    "wine_base = wines_copy[wines_copy[user_pairings].sum(axis=1)>0]\n",
-    "\n",
-    "# Filtro por precio\n",
-    "wine_base = wine_base[wine_base[\"price\"]>=user_input[\"precio_min\"]]\n",
-    "wine_base = wine_base[wine_base[\"price\"]<=user_input[\"precio_max\"]]\n",
-    "\n",
-    "# Filtro por uvas\n",
-    "wine_base = wine_base[wine_base[user_input[\"grape_list\"]].sum(axis=1)>0]\n",
-    "\n",
-    "# Zscore quality/price\n",
-    "wine_base['rating_zscore'] = stats.zscore(wine_base[\"rating\"])\n",
-    "wine_base['price_zscore'] = stats.zscore(wine_base[\"price\"])\n",
-    "wine_base[\"zscore_quality_price\"] = wine_base['rating_zscore'] - wine_base['price_zscore']\n",
-    "\n",
-    "# User similarity (Euclidean Distances)\n",
-    "scaler = MinMaxScaler()\n",
-    "\n",
-    "taste_features = [\"body\", \"tannis\", \"sweetness\", \"acidity\"]\n",
-    "scaled_tastes = [taste + \"_scld\" for taste in taste_features]\n",
-    "\n",
-    "wine_base[scaled_tastes] = scaler.fit_transform(wine_base[taste_features])\n",
-    "user_tastes = np.array(list(user_input[\"tastes\"].values())).reshape(1,-1)\n",
-    "distances = euclidean_distances(user_tastes, wine_base[scaled_tastes])[0]\n",
-    "wine_base[\"user_similarity\"] = 1 - (distances / distances.max())\n",
-    "\n",
-    "# Puntaje sintético del vino\n",
-    "wine_base[\"wine_score\"] = (\n",
-    "    0.3 * (wine_base[\"rating\"] / 5) + \n",
-    "    0.3 * (wine_base[\"zscore_quality_price\"] / wine_base[\"zscore_quality_price\"].max()) + \n",
-    "    0.1 * (wine_base[\"rating_qty\"] / wine_base[\"rating_qty\"].max()) +\n",
-    "    0.2 * wine_base[\"user_similarity\"] + \n",
-    "    0.1 * wine_base[user_input[\"main_pairing\"]]\n",
-    ")\n",
-    "\n",
-    "# Selección de uno de los mejores 10 vinos\n",
-    "top_wine_base = wine_base.nlargest(10, \"wine_score\")\n",
-    "top_selection_weights = [(1 - .075)**n for n in range(len(top_wine_base))] # Pesos decrecientes de a 7.5%\n",
-    "top_selection_weights = [w*(random.random() + 1) for w in top_selection_weights] # Agregamos factor aleatorio\n",
-    "total_weight = sum(top_selection_weights)\n",
-    "top_selection_weights = [w / total_weight for w in top_selection_weights] # Normalizamos para interpretabilidad\n",
-    "selected_wine_id = int(random.choices(top_wine_base.index, top_selection_weights, k=1)[0])\n",
-    "selected_wine = wine_base.loc[selected_wine_id]\n",
-    "\n",
-    "# Pasar esto a función\n",
     "# Simular si le gustó o no\n",
     "# Generar clase\n",
     "# Crear datos sintéticos"
