Mejora en cálculo de similitud con user taste

--- a/src/models/synthetic_user_draft.ipynb
+++ b/src/models/synthetic_user_draft.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 433,
    "id": "38058a87",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,7 @@
     "import random\n",
     "import sys\n",
     "import os\n",
+    "import logging\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 587,
    "id": "4b705032",
    "metadata": {},
    "outputs": [],
@@ -72,19 +73,19 @@
     "\n",
     "        if start_val <= value < end_val:\n",
     "            cat = categories[i]\n",
-    "            mid_val = (start_val + end_val) / 2\n",
-    "            return cat, mid_val\n",
+    "            val_range = [start_val, end_val]\n",
+    "            return cat, val_range\n",
     "    \n",
     "    # Gestiona valores atípicos (mayores o menores que el máximo o mínimo valor de los cuantiles)\n",
     "    if value >= end_val:\n",
     "        cat = categories[i] # Último i asignado es el mayor i\n",
-    "        mid_val = (start_val + end_val)/2\n",
-    "        return cat, mid_val\n",
+    "        val_range = [start_val, end_val]\n",
+    "        return cat, val_range\n",
     "    \n",
     "    if 0 <= value < quant_values[0]:\n",
     "        cat = categories[0]\n",
-    "        mid_val = (quant_values[0] + quant_values[1]) / 2\n",
-    "        return cat, mid_val\n",
+    "        val_range = [quant_values[0], quant_values[1]]\n",
+    "        return cat, val_range\n",
     "    \n",
     "    # Levanta error si el valor es inferior a cero\n",
     "    if value < 0:\n",
@@ -184,6 +185,9 @@
     "\n",
     "    price_range = [int(price_quantiles[low_price_index]), int(price_quantiles[high_price_index])]\n",
     "\n",
+    "    if price_range[1] == -1:\n",
+    "        price_range[1] = None\n",
+    "\n",
     "    return price_range"
    ]
   },
@@ -197,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 323,
    "id": "79ae3409",
    "metadata": {},
    "outputs": [],
@@ -205,7 +209,7 @@
     "# Transforma df escalando los gustos y agregando columna \"Otras Uvas\"\n",
     "\n",
     "def transform_df(df, grapes, top_grapes):\n",
-    "    tra_df = df\n",
+    "    tra_df = df.copy()\n",
     "\n",
     "    # Scaling de sabores\n",
     "    scaler = MinMaxScaler()\n",
@@ -223,7 +227,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 640,
+   "id": "9f95fb67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lógica para determinar fuzzy distance del perfil de vino seleccionado respecto a los vinos disponibles\n",
+    "def fuzzy_distance(value, q_low, q_high):\n",
+    "    if value < q_low:\n",
+    "        return (q_low - value) / (q_high - q_low)\n",
+    "    elif value > q_high:\n",
+    "        return (value - q_high) / (q_high - q_low)\n",
+    "    else:\n",
+    "        return 0\n",
+    "    \n",
+    "def compute_fuzzy_distance(range_dict, df):\n",
+    "    distances = []\n",
+    "\n",
+    "    for _, row in df.iterrows():\n",
+    "        wine_distance = 0\n",
+    "        col_count = 0\n",
+    "        for col in df.columns:\n",
+    "            key = col.replace(\"_scld\", \"\")\n",
+    "            if key in range_dict:\n",
+    "                value = row[col]\n",
+    "                q_low, q_high = range_dict[key]\n",
+    "                wine_distance += fuzzy_distance(value, q_low, q_high)\n",
+    "                col_count += 1\n",
+    "        \n",
+    "        distance = wine_distance / col_count if col_count > 0 else None # Cálculo del promedio de distancias\n",
+    "        distances.append(distance)\n",
+    "\n",
+    "    distances = np.array(distances)\n",
+    "\n",
+    "    return distances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 642,
    "id": "ad8740bc",
    "metadata": {},
    "outputs": [],
@@ -236,6 +278,7 @@
     "    precio_min = user_input.get(\"precio_min\")\n",
     "    precio_max = user_input.get(\"precio_max\")\n",
     "    grape_list = user_input.get(\"grape_list\")\n",
+    "    user_tastes = user_input.get(\"tastes\")\n",
     "\n",
     "    # User Weights\n",
     "    user_weights = user_input.get(\"weights\")\n",
@@ -264,30 +307,33 @@
     "    wine_base['price_zscore'] = stats.zscore(wine_base[\"price\"])\n",
     "    wine_base[\"zscore_quality_price\"] = wine_base['rating_zscore'] - wine_base['price_zscore']\n",
     "\n",
-    "    # User similarity (Euclidean Distances)\n",
-    "    user_tastes = np.array(list(user_input[\"tastes\"].values())).reshape(1,-1)\n",
-    "    scaled_tastes = [\"body_scld\", \"tannis_scld\", \"sweetness_scld\", \"acidity_scld\"]\n",
-    "    distances = euclidean_distances(user_tastes, wine_base[scaled_tastes])[0]\n",
-    "    wine_base[\"user_similarity\"] = 1 - (distances / distances.max())\n",
+    "    if len(wine_base) > 0:\n",
+    "        # User similarity (Fuzzy Distance)\n",
+    "        scaled_tastes = [\"body_scld\", \"tannis_scld\", \"sweetness_scld\", \"acidity_scld\"]\n",
+    "        distances = compute_fuzzy_distance(user_tastes, wine_base[scaled_tastes])\n",
+    "        wine_base[\"user_similarity\"] = 1 - (distances / distances.max())\n",
     "\n",
-    "    # Puntaje sintético del vino\n",
-    "    wine_base[\"wine_score\"] = (\n",
-    "        rating_w * (wine_base[\"rating\"] / 5) + \n",
-    "        price_quality_w * (wine_base[\"zscore_quality_price\"] / wine_base[\"zscore_quality_price\"].max()) + \n",
-    "        rating_qty_w * (wine_base[\"rating_qty\"] / wine_base[\"rating_qty\"].max()) +\n",
-    "        user_similarity_w * wine_base[\"user_similarity\"] + \n",
-    "        main_pairing_w * wine_base[user_input[\"main_pairing\"]]\n",
-    "    )\n",
+    "        # Puntaje sintético del vino\n",
+    "        wine_base[\"wine_score\"] = (\n",
+    "            rating_w * (wine_base[\"rating\"] / 5) + \n",
+    "            price_quality_w * (wine_base[\"zscore_quality_price\"] / wine_base[\"zscore_quality_price\"].max()) + \n",
+    "            rating_qty_w * (wine_base[\"rating_qty\"] / wine_base[\"rating_qty\"].max()) +\n",
+    "            user_similarity_w * wine_base[\"user_similarity\"] + \n",
+    "            main_pairing_w * wine_base[user_input[\"main_pairing\"]]\n",
+    "        )\n",
     "\n",
-    "    # Selección de uno de los mejores top_n vinos\n",
-    "    top_wine_base = wine_base.nlargest(top_n, \"wine_score\")\n",
-    "    top_selection_weights = [(1 - d)**n for n in range(len(top_wine_base))] # Pesos decrecientes de a d%\n",
-    "    top_selection_weights = [w*(random.random() + 1) for w in top_selection_weights] # Agregamos factor aleatorio\n",
-    "    total_weight = sum(top_selection_weights)\n",
-    "    top_selection_weights = [w / total_weight for w in top_selection_weights] # Normalizamos para interpretabilidad\n",
-    "    selected_wine_id = int(random.choices(top_wine_base.index, top_selection_weights, k=1)[0])\n",
-    "    selected_wine = wine_base.loc[selected_wine_id]\n",
-    "    return selected_wine"
+    "        # Selección de uno de los mejores top_n vinos\n",
+    "        top_wine_base = wine_base.nlargest(top_n, \"wine_score\")\n",
+    "        top_selection_weights = [(1 - d)**n for n in range(len(top_wine_base))] # Pesos decrecientes de a d%\n",
+    "        top_selection_weights = [w*(random.random() + 1) for w in top_selection_weights] # Agregamos factor aleatorio\n",
+    "        total_weight = sum(top_selection_weights)\n",
+    "        top_selection_weights = [w / total_weight for w in top_selection_weights] # Normalizamos para interpretabilidad\n",
+    "        selected_wine_id = int(random.choices(top_wine_base.index, top_selection_weights, k=1)[0])\n",
+    "        selected_wine = wine_base.loc[selected_wine_id]\n",
+    "        return selected_wine\n",
+    "    else:\n",
+    "        logging.info(\"No wines match user input!\")\n",
+    "        return None"
    ]
   },
   {
@@ -300,31 +346,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 709,
    "id": "41a09354",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'meal': 'Guiso de Lentejas',\n",
-       " 'main_pairing': 'vegetarian',\n",
-       " 'pairing_list': ['vegetarian'],\n",
-       " 'grape_list': ['Malbec'],\n",
+       "{'meal': 'Paella de Mariscos',\n",
+       " 'main_pairing': 'shellfish',\n",
+       " 'pairing_list': ['shellfish'],\n",
+       " 'grape_list': ['Cabernet Franc', 'Otras Uvas'],\n",
        " 'precio_min': 15,\n",
-       " 'precio_max': 34,\n",
-       " 'tastes': {'body': np.float64(0.46343065693430663),\n",
-       "  'tannis': np.float64(0.37758945386064025),\n",
-       "  'sweetness': np.float64(0.3744114877589454),\n",
-       "  'acidity': np.float64(0.39025331104539024)},\n",
-       " 'weights': {'rating': 0.3,\n",
+       " 'precio_max': 27,\n",
+       " 'tastes': {'body': [np.float64(0.31244525547445257),\n",
+       "   np.float64(0.37956204379562053)],\n",
+       "  'tannis': [np.float64(0.4109496906107075), np.float64(0.4526499865482916)],\n",
+       "  'sweetness': [np.float64(0.0), np.float64(0.17019774011299438)],\n",
+       "  'acidity': [np.float64(0.7725343962967726), np.float64(0.9601388710299601)]},\n",
+       " 'weights': {'rating': 0.25,\n",
        "  'price_quality': 0.25,\n",
        "  'rating_qty': 0.1,\n",
-       "  'user_similarity': 0.25,\n",
+       "  'user_similarity': 0.3,\n",
        "  'main_pairing': 0.1}}"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 709,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,15 +426,185 @@
     "        \"acidity\": selected_profile[\"acidity_scld\"][1]\n",
     "    },\n",
     "    \"weights\": {\n",
-    "        \"rating\": .3,\n",
+    "        \"rating\": .25,\n",
     "        \"price_quality\": .25,\n",
     "        \"rating_qty\": .1,\n",
-    "        \"user_similarity\": .25,\n",
+    "        \"user_similarity\": .3,\n",
     "        \"main_pairing\": .1\n",
     "    }\n",
     "}\n",
     "\n",
     "user_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 743,
+   "id": "187a74d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name                    Sauvignon Blanc\n",
+      "year                             2022.0\n",
+      "price                             17.99\n",
+      "rating                              4.0\n",
+      "rating_qty                         30.0\n",
+      "body_scld                      0.379562\n",
+      "tannis_scld                     0.45265\n",
+      "sweetness_scld                 0.608051\n",
+      "acidity_scld                   0.560627\n",
+      "rating_zscore                  0.922777\n",
+      "price_zscore                  -0.440366\n",
+      "zscore_quality_price           1.363143\n",
+      "wine_score                     0.634764\n",
+      "Name: 1759, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_grapes = list(get_top_grapes(grape_selection, 8).index)\n",
+    "\n",
+    "tra_wines = transform_df(wines_df, grape_selection, top_grapes)\n",
+    "\n",
+    "selected_wine = pick_wine(tra_wines, user_input, top_n=20)\n",
+    "\n",
+    "if selected_wine is None:\n",
+    "    print(\"No encontramos vinos para tu preferencia\")\n",
+    "else:\n",
+    "    display_columns = [\n",
+    "    \"name\", \"year\", \"price\", \"rating\",\n",
+    "    \"rating_qty\", \"body_scld\", \"tannis_scld\",\n",
+    "    \"sweetness_scld\", \"acidity_scld\", \"rating_zscore\",\n",
+    "    \"price_zscore\", \"zscore_quality_price\", \"wine_score\"]\n",
+    "    print(selected_wine[display_columns])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 589,
+   "id": "b0ac5f36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'body': ('intenso',\n",
+       "  [np.float64(0.7458394160583942), np.float64(1.0000000000000002)]),\n",
+       " 'tannis': ('moderado',\n",
+       "  [np.float64(0.3271455474845305), np.float64(0.42601560398170557)]),\n",
+       " 'sweetness': ('marcado',\n",
+       "  [np.float64(0.4300847457627119), np.float64(0.49576271186440685)]),\n",
+       " 'acidity': ('marcado',\n",
+       "  [np.float64(0.4415584415584416), np.float64(0.5232094638035232)])}"
+      ]
+     },
+     "execution_count": 589,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = { \n",
+    "    \"body\": selected_profile[\"body_scld\"],\n",
+    "    \"tannis\": selected_profile[\"tannis_scld\"],\n",
+    "    \"sweetness\": selected_profile[\"sweetness_scld\"],\n",
+    "    \"acidity\": selected_profile[\"acidity_scld\"]\n",
+    "}\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 574,
+   "id": "3aa76cd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>body_scld</th>\n",
+       "      <th>tannis_scld</th>\n",
+       "      <th>sweetness_scld</th>\n",
+       "      <th>acidity_scld</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.00</th>\n",
+       "      <td>0.236496</td>\n",
+       "      <td>0.168415</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.292786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.25</th>\n",
+       "      <td>0.422628</td>\n",
+       "      <td>0.333468</td>\n",
+       "      <td>0.194680</td>\n",
+       "      <td>0.487720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>0.504234</td>\n",
+       "      <td>0.421711</td>\n",
+       "      <td>0.323682</td>\n",
+       "      <td>0.583644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.75</th>\n",
+       "      <td>0.559270</td>\n",
+       "      <td>0.541297</td>\n",
+       "      <td>0.425141</td>\n",
+       "      <td>0.660666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.00</th>\n",
+       "      <td>0.817810</td>\n",
+       "      <td>0.831854</td>\n",
+       "      <td>0.906309</td>\n",
+       "      <td>0.952681</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      body_scld  tannis_scld  sweetness_scld  acidity_scld\n",
+       "0.00   0.236496     0.168415        0.000000      0.292786\n",
+       "0.25   0.422628     0.333468        0.194680      0.487720\n",
+       "0.50   0.504234     0.421711        0.323682      0.583644\n",
+       "0.75   0.559270     0.541297        0.425141      0.660666\n",
+       "1.00   0.817810     0.831854        0.906309      0.952681"
+      ]
+     },
+     "execution_count": 574,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tra_wines[tra_wines[main_pairing]==1][[\"body_scld\",\"tannis_scld\",\"sweetness_scld\",\"acidity_scld\"]].quantile([0, .25, .5, .75, 1])"
    ]
   },
   {
